--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
     "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
     "babel-preset-expo": "^54.0.7",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
