[1] Completed Wallet Tab Component Demand [2] Import Kitted UI to Wallet Project

--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "network.scash.m.wallet"
     },
     "android": {
       "adaptiveIcon": {
@@ -22,14 +23,22 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "network.scash.m.wallet"
     },
     "web": {
       "favicon": "./assets/images/logo.png",
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router"
-    ]
+      "expo-router",
+      "expo-dev-client"
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "39ec34b7-6588-4abb-893d-989f463bd6e0"
+      }
+    }
   }
 }
