--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-expo": "^54.0.7",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "^14.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
