--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "start": "expo start  --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "client": "npx expo start --dev-client"
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "babel-preset-expo": "^54.0.7",
+    "bip32": "^5.0.0",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^7.0.0",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.20",
     "expo-font": "^14.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
@@ -30,7 +35,9 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.2",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "tiny-secp256k1": "^2.2.4",
+    "wif": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
