--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "m-scash-wallet",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "/index.js",
   "scripts": {
     "start": "expo start  --clear",
-    "android": "expo start --android",
+    "android": "expo start --clear --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "client": "npx expo start --dev-client"
+    "client": "npx expo start --clear --dev-client"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.2.0",
     "@eva-design/eva": "^2.2.0",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "babel-preset-expo": "^54.0.7",
-    "bip32": "^5.0.0",
+    "base-64": "^1.0.0",
+    "bip32": "^5.0.0-rc.0",
     "bip39": "^3.1.0",
-    "bitcoinjs-lib": "^7.0.0",
+    "bitcoinjs-lib": "^6.1.7",
+    "buffer": "^6.0.3",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.20",
@@ -30,16 +33,23 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.2",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
+    "text-encoding": "^0.7.0",
     "tiny-secp256k1": "^2.2.4",
     "wif": "^5.0.0"
   },
   "devDependencies": {
+    "@types/bip32": "^2.0.4",
+    "@types/bip39": "^3.0.4",
+    "@types/bitcoinjs-lib": "^5.0.4",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "typescript": "~5.9.2"
