--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.2.0",
-    "@eva-design/eva": "^2.2.0",
-    "@ui-kitten/components": "^5.3.1",
-    "@ui-kitten/eva-icons": "^5.3.1",
+    "@tamagui/config": "^1.141.5",
     "babel-preset-expo": "^54.0.7",
     "base-64": "^1.0.0",
     "bip32": "^5.0.0-rc.0",
@@ -43,6 +41,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
+    "tamagui": "^1.141.5",
     "text-encoding": "^0.7.0",
     "tiny-secp256k1": "^2.2.4",
     "wif": "^5.0.0"
